# cadet-hub

./: .gitignore  Cargo.toml  README.md
configs/: application-local.yaml  application.yaml
crates/backend/: Cargo.toml
crates/backend/migrations/: 20260101010000_init.sql
crates/backend/src/: lib.rs
crates/backend/src/context/: application_context.rs  mod.rs
crates/backend/src/error/: backend_error.rs  mod.rs
crates/backend/src/facade/: admin_facade.rs  cadet_facade.rs  impex_facade.rs  mod.rs  user_facade.rs
crates/backend/src/mapper/: cadet_entity_mapper.rs  mod.rs  user_entity_mapper.rs
crates/backend/src/repository/: cadet_repository.rs  database.rs  db_error_handler.rs  entity.rs  mod.rs  query.rs  user_repository.rs
crates/backend/src/service/: auth_service.rs  cadet_impex_service.rs  cadet_service.rs  csv_service.rs  mod.rs  user_service.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/config/: application_config.rs  mod.rs
crates/common/src/error/: common_error.rs  mod.rs
crates/common/src/keyring/: keyring.rs  mod.rs
crates/common/src/logger/: logger.rs  mod.rs
crates/common/src/mapper/: cadet_mapper.rs  mod.rs
crates/common/src/model/: birth_date.rs  cadet.rs  full_name.rs  mod.rs  request.rs  tax_number.rs  user.rs
crates/common/src/util/: date_time_util.rs  mod.rs  string_util.rs
crates/common/src/validator/: validator.rs
crates/frontend/: Cargo.toml  Dioxus.toml  tailwind.css
crates/frontend/assets/locales/: uk-UA.ftl
crates/frontend/os_debian/: cadet-hub.desktop
crates/frontend/src/: main.rs
crates/frontend/src/client/: backend_client.rs  mod.rs
crates/frontend/src/component/: action_drawer.rs  breadcrumb_bar.rs  filter_bar.rs  mod.rs  pagination_bar.rs
crates/frontend/src/context/: application_context.rs  mod.rs
crates/frontend/src/element/: button.rs  form_data_extension.rs  input_field.rs  mod.rs
crates/frontend/src/error/: backend_error_handler.rs  frontend_error.rs  mod.rs
crates/frontend/src/extension/: i18n_extension.rs  mod.rs
crates/frontend/src/router/: router.rs
crates/frontend/src/util/: frontend_util.rs  mod.rs
crates/frontend/src/view/: application.rs  auth_layout.rs  cadet_course_edit_view.rs  cadet_course_grid_view.rs  cadet_course_impex_view.rs  cadet_course_list_view.rs  cadet_course_statistic_grid_view.rs  cadet_edit_view.rs  cadet_list_view.rs  header_layout.rs  home_view.rs  login_view.rs  mod.rs  modal_view.rs  user_edit_view.rs  user_list_view.rs
examples/: cadet-courses.csv
