[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/backend",
    "crates/frontend",
]
default-members = ["crates/frontend"]

[workspace.dependencies]
common = { path = "crates/common" }
backend = { path = "crates/backend" }

# Dioxus
dioxus = { version = "0.7.3", features = ["router", "desktop"] }
dioxus-i18n = { version = "0.5.1" }
unic-langid = { version = "0.9.6" }
rfd = { version = "0.17.2" }

# Logger
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-rolling-file = "0.1.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Async
tokio = { version = "1.49.0", features = ["full"] }
async-trait = { version = "0.1" }

# Database
sqlx = { version = "0.8.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "sqlite", "migrate"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }

# Security
argon2 = { version = "0.5" }
password-hash = { version = "0.5" }
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1.11", features = ["v4"] }
keyring = { version = "3", features = ["windows-native", "linux-native"] }

# Utilities
config = { version = "0.15.19" }
thiserror = { version = "2.0" }
directories = { version = "6.0" }
csv = { version = "1.4.0" }
serde = { version = "1.0.228", features = ["derive"] }
getset = { version = "0.1.6" }
derive_builder = { version = "0.20" }
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4" }

# Testing
mockall = { version = "0.14.0" }
spectral = { version = "0.6.0" }
tempfile = { version = "3.24.0" }